plugins {
   id 'java'
   id 'org.springframework.boot' version '3.4.5'
   id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.realive'
version = '0.0.1-SNAPSHOT'

java {
   toolchain {
      languageVersion = JavaLanguageVersion.of(17)
   }
}

configurations {
   compileOnly {
      extendsFrom annotationProcessor
   }
}

repositories {
   mavenCentral()
}

dependencies {
   // Spring Boot Starters
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

   // Jackson (Java 8 Date/Time 지원)
   implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

   // SpringDoc (Swagger)
   implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

   // JWT
   implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
   runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
   runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

   // DB Driver
   runtimeOnly 'org.postgresql:postgresql'

   // Lombok
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
   testCompileOnly 'org.projectlombok:lombok'
   testAnnotationProcessor 'org.projectlombok:lombok'

   // DevTools
   developmentOnly 'org.springframework.boot:spring-boot-devtools'

   // Test
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.springframework.security:spring-security-test'
   testImplementation 'org.mockito:mockito-core:5.2.0'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

   // QueryDSL
   implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
   annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
   annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
   annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

   // Redis (경매 알림용)
   // implementation 'org.springframework.boot:spring-boot-starter-data-redis'
   // implementation 'io.lettuce:lettuce-core:6.3.1.RELEASE'
}

tasks.named('test') {
   useJUnitPlatform()
}

def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
   main {
      java {
         srcDir querydslDir
      }
   }
}

tasks.withType(JavaCompile).configureEach {
   options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}